# hello_cli

./: README.md  pyproject.toml
hello_cli/: __main__.py  cli.py  model.py
tests/: cli_test.py  model_test.py
